k8-demo2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-nginx-app
  labels:
    app: sample-nginx-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sample-nginx-app
  template:
    metadata:
      labels:
        app: sample-nginx-app
    spec:
      containers:
      - name: nginx-app
        image: nginx
        ports:
        - containerPort: 80
